--- a/src/main/resources/templates/front/users/signup.html
+++ b/src/main/resources/templates/front/users/signup.html
@@ -12,7 +12,7 @@
 <header th:replace="fragments/header :: header(signup)"></header>
 <div class="container w-50">
   <h1 class="my-5">会員登録</h1>
-  <form th:action="@{/front/users/signup}" th:object="${userForm}" method="POST">
+  <form th:action="@{${urls.POST_USER_SIGNUP.url}}" th:object="${userForm}" method="POST">
     <!-- マウスホバー テーブル幅を画面の50％に設定  -->
     <table class="table table-bordered table-hover col-6">
       <!-- フォームの部品はform-groupで囲う -->
