--- a/src/main/resources/templates/front/users/signin.html
+++ b/src/main/resources/templates/front/users/signin.html
@@ -6,7 +6,7 @@
 
   <title>サインイン | Watering</title>
 
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.0/css/bootstrap.min.css}">
+  <link rel="stylesheet" media="all" th:href="@{/css/style.css}">
 </head>
 <body>
 <header th:replace="fragments/header :: header(signin)"></header>
@@ -44,5 +44,4 @@
   </form>
 </div>
 </body>
-<script th:src="@{/webjars/bootstrap/5.1.0/js/bootstrap.min.js}"></script>
 </html>
