--- a/src/main/resources/templates/front/users/signup.html
+++ b/src/main/resources/templates/front/users/signup.html
@@ -6,7 +6,7 @@
 
   <title>会員登録 | Watering</title>
 
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.0/css/bootstrap.min.css}">
+  <link rel="stylesheet" media="all" th:href="@{/css/style.css}">
 </head>
 <body>
 <header th:replace="fragments/header :: header(signup)"></header>
@@ -40,6 +40,5 @@
   </form>
 </div>
 </body>
-<script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/5.1.0/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/users.signup.bundle.js}"></script>
 </html>
