--- a/src/main/resources/templates/front/users/signup/completed.html
+++ b/src/main/resources/templates/front/users/signup/completed.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>会員登録完了 | Watering</title>
 
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.0/css/bootstrap.min.css}">
+  <link rel="stylesheet" media="all" th:href="@{/css/style.css}">
 </head>
 <body>
 <header th:replace="fragments/header :: header(null)"></header>
@@ -15,5 +15,4 @@
   </div>
 </div>
 </body>
-<script th:src="@{/webjars/bootstrap/5.1.0/js/bootstrap.min.js}"></script>
 </html>
